fix spacing

--- a/src/views/Homepage/CharacterIntro/styles.module.css
+++ b/src/views/Homepage/CharacterIntro/styles.module.css
@@ -35,9 +35,9 @@
 .images {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(auto, 1fr);
   grid-column-gap: var(--spacing-base);
-  grid-row-gap: var(--spacing-xx-loose);
+  grid-row-gap: var(--spacing-xxx-loose);
   margin-top: var(--spacing-x-loose);
 
   & .avatar:nth-child(1) {
